# extron-launcher

./: .gitattributes  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: main.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/ui/: card-hover-effect.tsx
