[package]
name = "extron-launcher"
version = "0.0.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.2", features = [
    "shell-all",
    "dialog-open",
    "fs-extract-api",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
zip = "2.1.3"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[profile.release.package.wry]
debug = true
debug-assertions = true
